[metadata]
url = https://github.com/probml/dynamax
author = Peter Chang, Giles Harper-Donnelly, Aleyna Kara, Xinglong Li, Scott Linderman, Kevin Murphy
description = Dynamic State Space Models in JAX.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python

[versioneer]
VCS = git
style = pep440
versionfile_source = dynamax/_version.py
versionfile_build = dynamax/_version.py
tag_prefix =
parentdir_prefix =

[options]
python_requires = >= 3.6
install_requires =
    jax>=0.3.15
    jaxlib
    fastprogress
    optax
    tensorflow_probability
    scikit-learn
    jaxtyping
    typing-extensions
    torchvision
    augly >= 1.0.0
    jax-tqdm @ git+https://github.com/jeremiecoullon/jax-tqdm.git

packages = find:


[options.extras_require]
notebooks =
    matplotlib
    seaborn
    flax
    blackjax
    graphviz
    scipy

doc =
    %(notebooks)s
    sphinx
    sphinx-autobuild
    sphinx_autodoc_typehints
    sphinx-math-dollar
    myst-nb
    jupytext
    sphinx-book-theme

test =
    codecov
    coverage
    pytest>=3.9
    pytest-cov

# A combination of dependencies required for developers
dev =
    %(doc)s
    %(test)s
